--- a/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
+++ b/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
@@ -14,7 +14,7 @@
                     pRipple
                     icon="pi pi-plus"
                     label="Chuyển hàng"
-                    (click)="openCreateModal()"
+                    [routerLink]="['/pages/merchandise/branch-transfer/create']"
                 ></button>
             </ng-template>
         </p-toolbar>
