--- a/src/app/components/pages/group-list/group-rights/group-rights.component.scss
+++ b/src/app/components/pages/group-list/group-rights/group-rights.component.scss
@@ -1,7 +1,14 @@
-.p-multiselect-item {
-  transition: background-color 0.3s;
+/* Add custom styles for the multi-select options */
+.p-multiselect .p-multiselect-item {
+  transition: background-color 0.3s ease;
 }
 
-.p-multiselect-item:hover {
-  background-color: #f1f1f1; /* Light gray on hover */
+.p-multiselect .p-multiselect-item:hover {
+  background-color: #f0f0f0; /* Change background color on hover */
+}
+
+/* Style for the selected items */
+.p-multiselect .p-multiselect-item.p-highlight {
+  background-color: #007ad9; /* Color for highlighted items */
+  color: white; /* Text color for highlighted items */
 }
