--- a/src/app/components/warranty-mb/warranty-mb.component.css
+++ b/src/app/components/warranty-mb/warranty-mb.component.css
@@ -92,6 +92,7 @@ i {
 
 .warranty-item-img{
     width: 100px;
+    margin:  0 auto;
     height: 100px;
     background-color: var(--primary-color);
     border-radius: 50%;
