--- a/src/app/components/warranty-mb/warranty-mb.component.html
+++ b/src/app/components/warranty-mb/warranty-mb.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="container">
         <div class="warranty-list">
-            <div class="warranty-item">
+            <div class="warranty-item" [routerLink]="'/activate-warranty'">
                 <div class="warranty-item-img">
                     <img src="assets/image/warranty/activate.png" alt="" />
                 </div>
