--- a/src/app/components/activate-success/activate-success.component.html
+++ b/src/app/components/activate-success/activate-success.component.html
@@ -7,7 +7,7 @@
             <span>
                 <i class="pi pi-arrow-left"></i>
             </span>
-            <span>Quay lại</span>
+            <span [routerLink]="'/activate-warranty'">Quay lại</span>
         </div>
         <div class="title">
             <h1>KÍCH HOẠT BẢO HÀNH TRỰC TUYẾN</h1>
@@ -26,7 +26,7 @@
                     <div
                         class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-start"
                     >
-                        Đỗ Văn Tùng
+                        {{ warrantyById?.customerName }}
                     </div>
                 </div>
                 <div class="field grid">
@@ -39,7 +39,7 @@
                     <div
                         class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-start"
                     >
-                        0973654074
+                        {{ warrantyById?.phoneNumber }}
                     </div>
                 </div>
                 <div class="field grid">
@@ -52,13 +52,15 @@
                     <div
                         class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-start"
                     >
-                        Liêu Hạ, xã Tân Lập, huyện Yên Mỹ, tỉnh Hưng Yên
+                        {{ warrantyById?.wardName }},
+                        {{ warrantyById?.districtName }},
+                        {{ warrantyById?.cityName }}
                     </div>
                 </div>
             </div>
         </div>
         <div class="mt-3">
-            <p-table [value]="">
+            <p-table [value]="warrantyById?.warrantyProducts">
                 <ng-template pTemplate="header">
                     <tr>
                         <th>Mã SP</th>
@@ -68,8 +70,26 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
                     <tr>
-                        <td>2323i32</td>
-                        <td>Máy cắt cỏ trục băm (Quật cỏ) Mitsubishi TL662</td>
+                        <td>{{ product?.productId }}</td>
+                        <td>
+                            <div class="flex flex-column">
+                                <span> {{ product?.productName }}</span>
+                                <span style="font-size: 13px"
+                                    ><strong>Số khung:</strong>
+                                    {{
+                                        product?.inventoryStockDetailProductImei
+                                            .frameNumber
+                                    }}</span
+                                >
+                                <span style="font-size: 13px"
+                                    ><strong>Số máy:</strong>
+                                    {{
+                                        product?.inventoryStockDetailProductImei
+                                            .engineNumber
+                                    }}</span
+                                >
+                            </div>
+                        </td>
                         <td>24 tháng</td>
                     </tr>
                 </ng-template>
