--- a/src/app/components/pages/warehouse/stock-in/create/create.component.html
+++ b/src/app/components/pages/warehouse/stock-in/create/create.component.html
@@ -320,7 +320,7 @@
                                     </div>
                                 </td>
                                 <td style="width: 12.5%; text-align: center">
-                                    {{ data.total | numberFormat }}
+                                    {{ data.total }}
                                 </td>
                                 <td style="width: 7%; text-align: center">
                                     <i
@@ -487,9 +487,7 @@
                                 <div
                                     class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-end"
                                 >
-                                    {{
-                                        stockInReceipt.totalPrice | numberFormat
-                                    }}
+                                    {{ stockInReceipt.totalPrice }}
                                 </div>
                             </div>
 
@@ -520,10 +518,7 @@
                                 <div
                                     class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-end total_amount_paid"
                                 >
-                                    {{
-                                        stockInReceipt.totalAmountPaid
-                                            | numberFormat
-                                    }}
+                                    {{ stockInReceipt.totalAmountPaid }}
                                 </div>
                             </div>
 
