--- a/src/app/components/pages/warranty/warranty-request/show/show.component.html
+++ b/src/app/components/pages/warranty/warranty-request/show/show.component.html
@@ -12,7 +12,7 @@
                 <button
                     pButton
                     pRipple
-                    [routerLink]="['/products/create']"
+                    [routerLink]="['/pages/warranty/warranty-request/create']"
                     icon="pi pi-plus"
                     label="Tạo yêu cầu bảo hành"
                 ></button>
