--- a/src/app/components/activate-warranty/activate-warranty.component.html
+++ b/src/app/components/activate-warranty/activate-warranty.component.html
@@ -53,6 +53,12 @@
                             >
                                 Vui lòng nhập số điện thoại
                             </div>
+                            <div
+                                *ngIf="createActivateWarranty.get('phoneNumber')?.errors?.['pattern']"
+                                class="error-message"
+                            >
+                                Số điện thoại phải gồm đúng 10 chữ số
+                            </div>
                         </div>
                     </div>
                 </div>
