--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -3,30 +3,19 @@
         <img src="assets/layout/images/logo.png" alt="logo" />
     </a>
 
-    <button
-        #menubutton
-        class="p-link layout-menu-button layout-topbar-button"
-        (click)="layoutService.onMenuToggle()"
-    >
+    <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
         <i class="pi pi-bars"></i>
     </button>
 
-    <button
-        #topbarmenubutton
-        class="p-link layout-topbar-menu-button layout-topbar-button"
-        (click)="layoutService.showProfileSidebar()"
-    >
+    <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
+        (click)="layoutService.showProfileSidebar()">
         <i class="pi pi-ellipsis-v"></i>
     </button>
 
-    <div
-        #topbarmenu
-        class="layout-topbar-menu"
-        [ngClass]="{
+    <div #topbarmenu class="layout-topbar-menu" [ngClass]="{
             'layout-topbar-menu-mobile-active':
                 layoutService.state.profileSidebarVisible
-        }"
-    >
+        }">
         <div class="box-user" *ngIf="userCurrent != null">
             <div class="user-info" (click)="toggleDropdown()" #userInfo>
                 <span>{{ userCurrent?.name }}</span>
