--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,8 @@
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeicons/primeicons.css";
 @import "assets/demo/styles/flags/flags.css";
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+
 .preloader {
   position: fixed;
   z-index: 999999;
